force-app/main/default/objects/Int_Agreement_Classification__c/Int_Agreement_Classification__c.object-meta.xml
<CustomObject>
    <description>Int Agreement Classification</description>
    <label>Int Agreement Classification</label>
    <nameField>
        <displayFormat>ACI-{0000000000}</displayFormat>
        <label>Agreement Classification Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements Classification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>