force-app/main/default/objects/Int_Agreement_Classification__c/fields/Agreement_Classification_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Classification_Type_Code__c</fullName>
    <description>Agreement Classification Type Code</description>
    <label>Agreement Classification Type Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>