force-app/main/default/objects/Int_Agreement_Classification__c/fields/Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agreement Name lookup to Agreement Object.</description>
    <label>Agreement Name</label>
    <referenceTo>Int_Agreement__c</referenceTo>
    <relationshipLabel>Int Agreements Classification</relationshipLabel>
    <relationshipName>Int_Agreements_Classification</relationshipName>
    <type>Lookup</type>
</CustomField>